[package]
name = "robalo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
hex = "0.4.3"
hmac = "0.12.1"
minreq = { version = "2.12.0", features = ["https", "json-using-serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.4"
